[tool.poetry]
authors = ["banteg"]
description = "helps you preserve an ethereum dataset"
license = "MIT"
name = "cryogen"
packages = [{include = 'cryogen', from = 'src'}]
readme = "readme.md"
repository = "https://github.com/banteg/cryogen"
version = "0.2.5"

[tool.poetry.dependencies]
pyarrow = ">=13.0.0"
python = ">=3.10"
rich = ">=13.5.2"
typer = ">=0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
ruff = ">=0.0.285"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.poetry.scripts]
cryogen = "cryogen.cli:app"
